# libav-families-experiment

./: .gitmodules  CMakeLists.txt
include/: utils.h
libs/: CMakeLists.txt
src/: main.cpp
src/common/: utils.cpp
src/encode/: encode.cpp
src/main/: main.cpp
src/opusf/: main.cpp
